--- a/src/css/fonts.styl
+++ b/src/css/fonts.styl
@@ -220,4 +220,5 @@
         content "\e608"       
         font-size 2px
         padding 0 5px
+        margin-bottom 5px
         
